added descriptor.json and simulation files

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -7,6 +7,11 @@
 <body>
 		<!-- Your code goes here-->
 
+	  <ul>
+              <li>See animated binary search operations insert,delete and search <a href="#" onclick='window.open("exptree.html","ExpressionTree","height=900,width=1200")'>Expression Tree</a>
+               </li>
+          </ul>
+
 	<!-- Add JS at the bottom of HTML file --> 
         <script src="./js/main.js"></script>
 </body>
